--- a/styles/news.css
+++ b/styles/news.css
@@ -109,6 +109,7 @@ nav .wrap_nav .nav_buttons .btn {
   color: #88e1f2;
   margin: 5px;
   margin-right: 15px;
+  font-family: "Special Elite", cursive;
 }
 
 nav .wrap_nav .nav_buttons .btn:hover {
