--- a/styles/index.css
+++ b/styles/index.css
@@ -9,7 +9,7 @@ body {
 width: 100%;
 height: 620px;
 background-repeat: no-repeat;
-background-image: url(/img/music.jpg); 
+background-image: url("../img/music.jpg");  
 background-size: cover;
 }
 .wrap_nav{
