--- a/styles/index.css
+++ b/styles/index.css
@@ -8,7 +8,7 @@ body {
 width: 100%;
 height: 100vh;
 background-repeat: no-repeat;
-background-image: url("../img/music.jpg");  
+background-image: url(/img/music.jpg);  
 background-size: cover;
 }
 .wrap_nav{
