--- a/styles/nicko.css
+++ b/styles/nicko.css
@@ -116,7 +116,7 @@ h1{
 .box1{
 grid-column: 1/2;
 grid-row: 1/2;
-background-image: url(/img/nicko-mcbrain-cancer.jpg);
+background-image: url(/img/nicko.jpg);
 background-size: cover;
 background-position: right;
 border-radius: 10px;
