--- a/styles/contact.css
+++ b/styles/contact.css
@@ -128,7 +128,6 @@ p{
 
 .wrap_footer{
   width: 100%;
-  height: 320px;
   display: flex;
   align-items: flex-end;
   margin-bottom: 15px;
@@ -323,6 +322,7 @@ select:valid {
   background-color:#b8e1f254;
   height: 40px;
   display: flex;
+    margin-bottom: 15px;
   align-items: center;
   box-sizing: border-box;
 }
