--- a/styles/contact.css
+++ b/styles/contact.css
@@ -309,12 +309,8 @@ select:valid {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 15px;
 }
-
-
-
-
-
 
 /* Footer */
 .footer{
@@ -323,6 +319,7 @@ select:valid {
   height: 40px;
   display: flex;
     margin-bottom: 15px;
+    margin-top: 15px;
   align-items: center;
   box-sizing: border-box;
 }
