--- a/styles/nicko.css
+++ b/styles/nicko.css
@@ -115,7 +115,7 @@ h1{
 .box1{
 grid-column: 1/2;
 grid-row: 1/2;
-background-image: url(/img/nicko.jpg);
+background-image: url(../img/nicko.jpg);
 background-size: cover;
 background-position: right;
 border-radius: 10px;
@@ -124,7 +124,7 @@ border-radius: 10px;
 .box2{
   grid-column: 2/3;
   grid-row: 1/2;
-  background-image: url(/img/Nicko-McBrain-RadioHouse.jpg);
+  background-image: url(../img/Nicko-McBrain-RadioHouse.jpg);
   background-size: cover;
   background-position: right;
   border-radius: 10px;
@@ -133,7 +133,7 @@ border-radius: 10px;
 .box3{
   grid-column: 3/4;
   grid-row: 1/2;
-  background-image: url(/img/Nicko-McBrain.jpg);
+  background-image: url(../img/Nicko-McBrain.jpg);
   background-size: cover;
   background-position: right;
   border-radius: 10px;
@@ -141,7 +141,7 @@ border-radius: 10px;
 .box4{
   grid-column: 4/5;
   grid-row: 1/2;
-  background-image: url(/img/nicko2.webp);
+  background-image: url(../img/nicko2.webp);
   background-size: cover;
   background-position: center;
   border-radius: 10px;
@@ -150,7 +150,7 @@ border-radius: 10px;
 .box5{
   grid-column: 2/3;
   grid-row: 2/4;
-  background-image: url(/img/nicko1!.jpg);
+  background-image: url(../img/nicko1!.jpg);
   background-size: cover;
   background-position: center;
   border-radius: 10px;
@@ -158,7 +158,7 @@ border-radius: 10px;
 .box6{
   grid-column: 3/4;
   grid-row: 2/4;
-  background-image: url(/img/nicko3.jpg);
+  background-image: url(../img/nicko3.jpg);
   background-size: cover;
   background-position: center top;
   border-radius: 10px;
