--- a/styles/nicko.css
+++ b/styles/nicko.css
@@ -1,5 +1,5 @@
 body {
-  
+  height: 100vh;
   width: 100%;
   
   display: flex;
@@ -99,6 +99,7 @@ h1{
   text-align: center;
 }
 .grid_flex{
+  height: 74vh;
   width: 100%;
   display: flex;
   justify-content: center;
